--- a/mosquitto/supervisord.conf
+++ b/mosquitto/supervisord.conf
@@ -12,11 +12,11 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autorestart=true
 
-[program:mqtt_loop]
-directory=/arena
-command=python mqtt.py
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
-autorestart=true
+# [program:mqtt_loop]
+# directory=/arena
+# command=python mqtt.py
+# stdout_logfile=/dev/stdout
+# stdout_logfile_maxbytes=0
+# stderr_logfile=/dev/stderr
+# stderr_logfile_maxbytes=0
+# autorestart=true
