--- a/docker/Dockerfile-mqtt
+++ b/docker/Dockerfile-mqtt
@@ -2,12 +2,16 @@ FROM python:3.6
 
 RUN apt-get update && apt-get install -y supervisor mosquitto
 
+# used for PID run file
+RUN mkdir -p /var/run/mosquitto
+RUN chmod -R 777 /var/run/mosquitto
+
 COPY mosquitto/mosquitto.conf /etc/mosquitto/mosquitto.conf
 COPY mosquitto/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
-COPY Arena /arena
+#COPY Arena /arena
 
-COPY ./requirements/base.txt .
-RUN pip install -r base.txt
+#COPY ./requirements/base.txt .
+#RUN pip install -r base.txt
 
 RUN mkdir -p /var/log/supervisor
 
