--- a/docker/Dockerfile-arena
+++ b/docker/Dockerfile-arena
@@ -1,73 +1,20 @@
-FROM nvidia/cuda:11.7.1-devel-ubuntu22.04
-# Built using PyImageSearch guide:
-# http://www.pyimagesearch.com/2015/06/22/install-opencv-3-0-and-python-2-7-on-ubuntu/
-
-ARG DEBIAN_FRONTEND
-ENV DEBIAN_FRONTEND=noninteractive
-ARG ENV_FILE
-ENV ENV_FILE=${ENV_FILE:-./Arena/configurations/.env.prod}
-ARG ROOT_DIR
-ENV ROOT_DIR=${ROOT_DIR:-/data/Pogona_Pursuit}
-# Install dependencies
-RUN apt-get -qq update && apt-get -qq upgrade -y && apt-get -qq install -y \
-      wget \
-      unzip \
-      libtbb2 \
-      libtbb-dev && \
-    apt-get -qq install -y \
-      build-essential \
-      cmake \
-      git \
-      x11-xserver-utils \
-      pkg-config \
-      libjpeg8-dev \
-      libtiff5-dev \
-      libpng-dev \
-      libgtk2.0-dev \
-      libavcodec-dev \
-      libavformat-dev \
-      libswscale-dev \
-      libv4l-dev \
-      libatlas-base-dev \
-      gfortran \
-      libhdf5-dev \
-      python3.8-dev \
-      python3-tk
-
-RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.8 1
-RUN apt-get -qq install -y python3-pip && \
-    pip3 install --upgrade pip && \
-    pip3 install numpy && \
-    apt-get autoclean && apt-get clean && \
-    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+FROM arena_base:v1.0
 
 # Required for nvidia-docker v1
 RUN echo "/usr/local/nvidia/lib" >> /etc/ld.so.conf.d/nvidia.conf && \
     echo "/usr/local/nvidia/lib64" >> /etc/ld.so.conf.d/nvidia.conf
 
-RUN mkdir -p $ROOT_DIR
-WORKDIR $ROOT_DIR
-COPY ./requirements ./requirements
-COPY ./Arena ./Arena
 COPY $ENV_FILE ./Arena/.env
 RUN apt-get -qq update && apt-get -qq install -y lsb-release \
   libusb-1.0.0 libpq-dev udev
 
-ENV DEBIAN_FRONTEND=dialog
+ENV DEBIAN_FRONTEND=noninteractive
 RUN pip3 install -r requirements/arena.txt
 RUN pip3 install -r requirements/pose.txt
 # Installation of deeplabcut-live
 # RUN pip3 install --no-deps deeplabcut-live colorcet
 # Spinnaker
-RUN pip3 install ./Arena/bin/spinnaker_python-2.7.0.128-cp38-cp38-linux_x86_64.whl
-RUN cd ./Arena/bin/spinnaker && (echo "yes" && cat) | ./install_spinnaker.sh
+#RUN pip3 install ./Arena/bin/spinnaker_python-3.0.0.118-cp38-cp38-linux_x86_64.whl
+#RUN cd ./Arena/bin/spinnaker-3.0.0.118-amd64 && (echo "y" && cat) | ./install_spinnaker.sh
 
-ENV TZ=Asia/Jerusalem
-RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
-
-RUN echo 'alias python="python3.8"' >> ~/.bashrc
-
-RUN cd Arena/bin && tar xvf Vimba64_v6.0_Linux.tgz && cd Vimba_6_0/VimbaUSBTL && ./Install.sh
-RUN cd Arena/bin/Vimba_6_0/VimbaPython && ./Install.sh
-
-RUN apt-get update && apt-get install ffmpeg libsm6 libxext6  -y
+RUN mkdir -p /data/Pogona_Pursuit/output
