--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -21,11 +21,11 @@ services:
     runtime: nvidia
     command: "python3 api.py"
     ports:
-      - 3350:8888
-      - 3351:5000
+      - 0.0.0.0:5080:5084
     working_dir: ${ROOT_DIR}/Arena
     environment:
       - FLASK_APP=api.py
+      - IS_PROD=1
       - LC_ALL=C.UTF-8
       - LANG=C.UTF-8
       - PYTHONUNBUFFERED=1
