--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ Arena/.archive
 *.mp4
 *.pth
 *.pdf
+!/notebooks/arena_figures/*.pdf
+!/notebooks/figures/final_figures/*.pdf
 *.conv.74
 *.*~
 *.log
