no docker version

--- a/redis/supervisord.conf
+++ b/redis/supervisord.conf
@@ -12,11 +12,11 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autorestart=true
 
-[program:websocket]
-directory=/websocket
-command=nodemon server.js
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
-autorestart=true
+; [program:websocket]
+; directory=/websocket
+; command=nodemon server.js
+; stdout_logfile=/dev/stdout
+; stdout_logfile_maxbytes=0
+; stderr_logfile=/dev/stderr
+; stderr_logfile_maxbytes=0
+; autorestart=true
