--- a/pogona_hunter/src/config.json
+++ b/pogona_hunter/src/config.json
@@ -110,7 +110,7 @@
     "rect_tunnel": "rect tunnel"
   },
   "boards": {
-    "holes": ["random", "random_speeds", "circle", "low_horizontal", "low_horizontal_noise", "jump_up", "accelerate", "random_low_horizontal"],
+    "holes": ["random", "random_speeds", "circle", "low_horizontal", "low_horizontal_noise", "jump_up", "accelerate", "random_low_horizontal", "static"],
     "tunnel": ["rect_tunnel"]
   },
   "targetDrifts": {
