adding scambled-ant exp stuff

--- a/pogona_hunter/src/config.json
+++ b/pogona_hunter/src/config.json
@@ -90,6 +90,16 @@
       },
       "stepsPerImage": 5
     },
+    "scram_ant": {
+      "text": "Scramble Ant",
+      "numImagesPerBug": 7,
+      "speed": 3,
+      "radiusRange": {
+        "min": 120,
+        "max": 130
+      },
+      "stepsPerImage": 5
+    },
     "centipede": {
       "text": "Centipede",
       "numImagesPerBug": 4,
