--- a/pogona_hunter/src/config.json
+++ b/pogona_hunter/src/config.json
@@ -175,7 +175,7 @@
   "boards": {
     "holes": ["random", "random_speeds", "circle", "low_horizontal", "low_horizontal_noise", "jump_up", "accelerate", "random_low_horizontal", "static", "circle_accelerate", "circle_flip"],
     "tunnel": ["rect_tunnel"],
-    "pb_tunnel": ["pt_tunnel"]
+    "pbtunnel": ["pt_tunnel"]
   },
   "targetDrifts": {
     "leftBottom": {
